ozivakids alignment issue and hershey page changes done

--- a/src/pages/ozivakids/ozivakids.scss
+++ b/src/pages/ozivakids/ozivakids.scss
@@ -11,6 +11,11 @@
 			font-size: 2.3em !important;
 		}
 	}
+
+	img{
+		width: 100%;
+	}
+
 	img{
 		max-width: 100%;
 	}
@@ -75,6 +80,7 @@
 		position: relative;
 		width: 100%;
 		margin-top: 45vh;
+		text-align: center;
 			@include respond-until(sm) {
 				margin-top: 5em;
 			}
